Lab 1 working